--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python==4.5.5.62
-numpy==1.21.5
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-boto3==1.20.45
+opencv-python
+numpy
+matplotlib
+matplotlib-inline
+boto3
