--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,5 +19,5 @@ COPY .devcontainer/.bashrc /tmp
 
 # [Optional] Uncomment this section to install additional OS packages.
 
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends 
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends python3-opencv libvips42
