--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+# help from  https://stackoverflow.com/a/39461324
+
 # Handle line endings automatically for files detected as text 
 # and leave all files detected as binary untouched.
 * text=false
