--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-UnifiedImageReader
-WebApp
-ModelManager
-Filtration
-CustomDataset
-ML-Supervised
-ML-Unsupervised
-PublicDatasetMaterial
-credentials
+# Ignore everything
+*
+# Don't ignore the git files
+!.gitattributes
+!.gitignore
+!environment.yml
+!README.md
+# Don't ignore the devcontainer
+!.devcontainer
+# Ignore the user's credentials
+.devcontainer/credentials
