--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,6 +38,8 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "bash -c /workspaces/dev-container/.devcontainer/setup_repos.sh",
 
+	"postStartCommand": "export PATH=\"/workspaces/dev-container/SagemakerTemplate/scripts:$PATH\"",
+
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
