--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,5 +16,5 @@ RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bi
 RUN apt-get update \
     && apt-get -y install python3-opencv
 
-COPY ../requirements.txt /tmp
-RUN pip install -r /tmp/requirements.txt
+# COPY ../requirements.txt /tmp
+# RUN pip install -r /tmp/requirements.txt
