--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !.gitmodules
 !environment.yml
 !README.md
+!supervised_push.sh
 # Don't ignore the devcontainer
 !.devcontainer
 # Ignore the user's credentials
