--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 name: base
 channels:
   - pytorch
-  - conda-forge
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -191,10 +191,13 @@ dependencies:
     - markupsafe==2.0.1
     - mccabe==0.6.1
     - opencv-python==4.5.5.62
-    - pip==21.3.1
+    - pip==22.0.3
     - platformdirs==2.4.1
     - pylint==2.12.2
     - python-dotenv==0.19.2
+    - pyvips==2.1.16
+    - slideio==0.6.1
+    - tables==3.7.0
     - toml==0.10.2
     - visitor==0.1.3
     - werkzeug==2.0.2
