make better changes for arm64

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,7 @@
 [submodule "SagemakerTemplate"]
     path = ./SagemakerTemplate
     url = dummy
+
+[submodule "AWS-Utils"]
+    path = ./AWS-Utils
+    url = dummy
