--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 !.gitmodules
 !environment.yml
 !README.md
+# Don't ignore the docs folder
+!docs
 # Don't ignore the devcontainer
 !.devcontainer
 # Ignore the user's credentials
