--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 name: base
 channels:
   - pytorch
-  - conda-forge
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -176,56 +176,98 @@ dependencies:
   - zlib=1.2.11=h7f8727e_4
   - zstd=1.4.9=haebb681_0
   - pip:
+    - absl-py==1.0.0
     - albumentations==1.1.0
+    - art==5.5
     - asgiref==3.5.0
     - astroid==2.9.3
+    - astunparse==1.6.3
     - attrs==20.3.0
     - boto3==1.21.26
     - botocore==1.24.26
+    - cachetools==5.0.0
     - click==8.0.3
+    - cloudpickle==2.0.0
     - colorama==0.4.4
+    - csbdeep==0.6.3
     - dill==0.3.4
     - dnspython==2.2.0
     - dominate==2.6.0
     - email-validator==1.1.3
+    - fastjsonschema==2.15.3
     - flask==2.0.2
     - flask-bootstrap==3.3.7.1
     - flask-wtf==1.0.0
+    - flatbuffers==2.0
+    - gast==0.5.3
+    - google-auth==2.6.3
+    - google-auth-oauthlib==0.4.6
     - google-pasta==0.2.0
+    - grpcio==1.44.0
+    - h5py==3.6.0
+    - histolab==0.5.1
     - imageio==2.16.1
     - importlib-metadata==4.11.3
     - isort==5.10.1
     - itsdangerous==2.0.1
     - jinja2==3.0.3
     - joblib==1.1.0
+    - jsonschema==4.4.0
+    - keras==2.8.0
+    - keras-preprocessing==1.1.2
     - lazy-object-proxy==1.7.1
+    - libclang==13.0.0
+    - llvmlite==0.38.0
+    - markdown==3.3.6
     - markupsafe==2.0.1
     - mccabe==0.6.1
     - multiprocess==0.70.12.2
+    - nbformat==5.3.0
     - networkx==2.7.1
+    - numba==0.55.1
+    - oauthlib==3.2.0
     - opencv-python==4.5.5.62
     - opencv-python-headless==4.5.5.64
+    - openslide-python==1.1.2
+    - opt-einsum==3.3.0
     - pathos==0.2.8
     - pip==22.0.3
     - platformdirs==2.4.1
+    - plotly==5.7.0
     - pox==0.3.0
     - ppft==1.6.6.4
     - protobuf==3.19.4
     - protobuf3-to-dict==0.1.5
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pycm==3.4
     - pylint==2.12.2
+    - pyrsistent==0.18.1
     - python-dotenv==0.19.2
     - pyvips==2.1.16
     - pywavelets==1.3.0
     - pyyaml==6.0
     - qudida==0.0.4
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
     - sagemaker==2.80.0
     - scikit-image==0.19.2
     - scikit-learn==1.0.2
     - scipy==1.8.0
     - slideio==0.6.1
     - smdebug-rulesconfig==1.0.1
+    - stardist==0.8.2
+    - tenacity==8.0.1
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.8.0
+    - tensorflow-io-gcs-filesystem==0.24.0
+    - termcolor==1.1.0
+    - tf-estimator-nightly==2.8.0.dev2021122109
     - threadpoolctl==3.1.0
     - tifffile==2022.2.9
+    - timm==0.5.4
     - toml==0.10.2
     - visitor==0.1.3
     - werkzeug==2.0.2
